// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/CheckboxGroup Defaults play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:rh:"
            class="Fieldset_srOnly__7qh39"
    >
      Velg det som passer deg
    </legend>
    <div class="Fieldset_legend__8odl-"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:ri:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:ri:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:rk:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:rk:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:rm:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:rm:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:rg:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup LegendWithMarkup smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:rp:"
            class="Fieldset_srOnly__7qh39"
    >
      <h1 class="Heading_heading__7K0um Heading_heading_level3__T5BVI  ">
        Dette er en Heading i legend
      </h1>
      <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_ingress__K1ALx  ">
        <em>
          Dette er en italic Paragraph med ingress variant i legend
        </em>
      </p>
    </legend>
    <div class="Fieldset_legend__8odl-"
         aria-hidden="true"
    >
      <h1 class="Heading_heading__7K0um Heading_heading_level3__T5BVI  ">
        Dette er en Heading i legend
      </h1>
      <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_ingress__K1ALx  ">
        <em>
          Dette er en italic Paragraph med ingress variant i legend
        </em>
      </p>
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:rq:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:rq:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:rs:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:rs:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:ru:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:ru:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:ro:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup LegendWithMarkupAndRequiredMark smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r11:"
            class="Fieldset_srOnly__7qh39"
    >
      <h1 class="Heading_heading__7K0um Heading_heading_level3__T5BVI  ">
        Dette er en Heading i legend
      </h1>
      <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_ingress__K1ALx  ">
        <em>
          Dette er en italic Paragraph med ingress variant i legend
        </em>
      </p>
    </legend>
    <div class="Fieldset_legend__8odl- Fieldset_legendWithMarkup_required__WcdUI"
         aria-hidden="true"
    >
      <h1 class="Heading_heading__7K0um Heading_heading_level3__T5BVI  ">
        Dette er en Heading i legend
      </h1>
      <p class="Paragraph_paragraph__NPzKO Paragraph_paragraph_ingress__K1ALx  ">
        <em>
          Dette er en italic Paragraph med ingress variant i legend
        </em>
      </p>
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r12:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r12:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r14:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r14:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r16:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r16:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r10:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithAttributes play-test 1`] = `
<div data-test-block="true">
  <fieldset id="htmlid"
            data-testid="123ID"
            class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le dummyClassname"
            lang="nb"
            form="123form"
  >
    <legend id="legendId-:r9:"
            class="Fieldset_srOnly__7qh39"
    >
      Velg det som passer deg
    </legend>
    <div class="Fieldset_legend__8odl-"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:ra:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:ra:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:rc:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:rc:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:re:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:re:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r8:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r3d:"
            class="Fieldset_legend__8odl-   Fieldset_legendNoMarginBottom__UO3iu dummyClassname"
    >
      Velg det som passer deg
    </legend>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="legendId-:r3d:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r3e:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r3e:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="Help_description__niabw   dummyClassname">
      beskrivelse
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r3f:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               aria-describedby="checkboxGroupErrorId-:r3c:"
               aria-invalid="true"
               value
        >
        <label for="checkboxInputId-:r3f:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R Checkbox_labelCheckbox_error__TDi7U">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r3h:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               aria-describedby="checkboxGroupErrorId-:r3c:"
               aria-invalid="true"
               value
        >
        <label for="checkboxInputId-:r3h:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R Checkbox_labelCheckbox_error__TDi7U">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r3j:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               aria-describedby="checkboxGroupErrorId-:r3c:"
               aria-invalid="true"
               value
        >
        <label for="checkboxInputId-:r3j:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R Checkbox_labelCheckbox_error__TDi7U">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r3c:"
           aria-live="assertive"
           aria-atomic="true"
      >
        <div class="ErrorMessage_errorMessage__508oW CheckboxGroup_errorMessage__+zJdH dummyClassname">
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
            </path>
          </svg>
          <p class="ErrorMessage_errorMessageText__e27TU">
            Velg minst ett av alternativene
          </p>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithDescription play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r2s:"
            class="Fieldset_srOnly__7qh39"
    >
      Velg det som passer deg
    </legend>
    <div class="Fieldset_legend__8odl-   Fieldset_legendNoMarginBottom__UO3iu"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="Help_description__niabw">
      Vi trenger å vite om du har barn.
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r2t:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r2t:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r2v:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r2v:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r31:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r31:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r2r:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithDisabled play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le"
            disabled
  >
    <legend id="legendId-:r1h:"
            class="Fieldset_srOnly__7qh39"
    >
      Velg det som passer deg
    </legend>
    <div class="Fieldset_legend__8odl-"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r1i:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r1i:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r1k:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r1k:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r1m:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r1m:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r1g:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithDisabledAndChecked smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le"
            disabled
  >
    <legend id="legendId-:r1p:"
            class="Fieldset_srOnly__7qh39"
    >
      Velg det som passer deg
    </legend>
    <div class="Fieldset_legend__8odl-"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r1q:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
               checked
        >
        <label for="checkboxInputId-:r1q:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r1s:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r1s:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r1u:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r1u:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r1o:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithError play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r29:"
            class="Fieldset_srOnly__7qh39"
    >
      Velg det som passer deg
    </legend>
    <div class="Fieldset_legend__8odl-"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r2a:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               aria-describedby="checkboxGroupErrorId-:r28:"
               aria-invalid="true"
               value
        >
        <label for="checkboxInputId-:r2a:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R Checkbox_labelCheckbox_error__TDi7U">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r2c:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               aria-describedby="checkboxGroupErrorId-:r28:"
               aria-invalid="true"
               value
        >
        <label for="checkboxInputId-:r2c:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R Checkbox_labelCheckbox_error__TDi7U">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r2e:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               aria-describedby="checkboxGroupErrorId-:r28:"
               aria-invalid="true"
               value
        >
        <label for="checkboxInputId-:r2e:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R Checkbox_labelCheckbox_error__TDi7U">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r28:"
           aria-live="assertive"
           aria-atomic="true"
      >
        <div class="ErrorMessage_errorMessage__508oW CheckboxGroup_errorMessage__+zJdH">
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
            </path>
          </svg>
          <p class="ErrorMessage_errorMessageText__e27TU">
            Velg minst ett av alternativene
          </p>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r34:"
            class="Fieldset_srOnly__7qh39"
    >
      Velg det som passer deg
    </legend>
    <div class="Fieldset_legend__8odl-   Fieldset_legendNoMarginBottom__UO3iu"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="legendId-:r34:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r35:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r35:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r36:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r36:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r38:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r38:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r3a:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r3a:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r33:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithHelptext play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r2i:"
            class="Fieldset_srOnly__7qh39"
    >
      Velg det som passer deg
    </legend>
    <div class="Fieldset_legend__8odl-   Fieldset_legendNoMarginBottom__UO3iu"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="legendId-:r2i:"
            aria-expanded="true"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2j:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2j:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="Help_helpBox__nbhjO  undefined">
      <span class="Help_helpBoxText__j6sH7">
        Vi trenger å vite om du har barn.
      </span>
      <button class="IconButton_button__mw9sG IconButton_button_small__etst4  Help_helpBoxCloseButton__RueX2"
              type="button"
      >
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2q:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2q:">
            Lukk
          </title>
          <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
          </path>
        </svg>
      </button>
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r2k:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r2k:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r2m:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r2m:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r2o:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r2o:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r2h:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithHideLegend play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r19:"
            class="Fieldset_srOnly__7qh39"
    >
      Velg det som passer deg
    </legend>
    <div class="Fieldset_legend__8odl-  Fieldset_srOnly__7qh39"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="Fieldset_contentContainer__fJcfT Fieldset_contentContainerNoMarginTop__YkL1P">
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r1a:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r1a:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r1c:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r1c:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r1e:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r1e:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r18:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithRef play-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le"
            id="dummyIdForwardedFromRef"
  >
    <legend id="legendId-:r1:"
            class="Fieldset_srOnly__7qh39"
    >
      Velg det som passer deg
    </legend>
    <div class="Fieldset_legend__8odl-"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r2:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r2:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r4:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r4:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r6:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r6:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r0:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`Tester/CheckboxGroup WithRequiredMark smoke-test 1`] = `
<div data-test-block="true">
  <fieldset class="Fieldset_fieldset__gwnkr Fieldset_fieldset_hasSpacing__966Le">
    <legend id="legendId-:r21:"
            class="Fieldset_srOnly__7qh39"
    >
      Velg det som passer deg
    </legend>
    <div class="Fieldset_legend__8odl- Fieldset_legend_required__U4xWm"
         aria-hidden="true"
    >
      Velg det som passer deg
    </div>
    <div class="Fieldset_contentContainer__fJcfT">
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r22:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r22:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn over 16 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r24:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r24:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn under 12 år
            </span>
          </span>
        </label>
      </div>
      <div class="Checkbox_container__xhXb4 Checkbox_containerSpacingBottom__qV7LR ">
        <input id="checkboxInputId-:r26:"
               class="Checkbox_input__fDeJ7"
               type="checkbox"
               value
        >
        <label for="checkboxInputId-:r26:"
               class="Checkbox_label__sEFOt  "
        >
          <span class="Checkbox_labelCheckbox__TIE0R ">
            <span class="Checkbox_labelCheckboxCheck__x9xdZ">
            </span>
          </span>
          <span class="Checkbox_labelContent__Nf+Nz ">
            <span class>
              Har barn som er 12 år eller eldre og som har særskilt omsorgsbehov
            </span>
          </span>
        </label>
      </div>
      <div id="checkboxGroupErrorId-:r20:"
           aria-live="assertive"
           aria-atomic="true"
      >
      </div>
    </div>
  </fieldset>
</div>
`;
